# pypkg-deb

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
pypkg_deb/: __main__.py  deb.py
